tests/snapshots/run_wpt_conformance__trtx_reshape_float16_tensor_to_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reshape.https.any.js",
    "reshape float16 tensor to 1D tensor",
    "trtx",
    "PASS",
)
